--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@ yarn-error.log*
 
 # env files
 .env*.local
+.env
+.env.production
+.env.development
+.env.test
 
 # vercel
 .vercel
@@ -34,10 +38,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
